Fix chart label width and alignment.

--- a/resources/assets/less/style.less
+++ b/resources/assets/less/style.less
@@ -165,7 +165,7 @@
 }
 
 #pick-chart {
-  margin-left: 30px;
+  margin-left: 38px;
 }
 
 #graph-labels {
